# c-gmm-kmeans

./: CMakeLists.txt  LICENSE  README.md
data/: test.csv  test_2.csv  test_3.csv  test_4.csv
src/: data.c  data.h  gmm.c  gmm.h  kmeans.c  kmeans.h  main-gmm.c  main-kmeans.c
src/test/: test-data.c
